// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`move-document should handle moving non-existent document 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The content could not be found","status":404,"operationStatus":"NotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`move-document should handle moving to non-existent target 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The targeted content parent could not be found","status":404,"operationStatus":"ParentNotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`move-document should move a document to another root document 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
